--- a/html/index.html
+++ b/html/index.html
@@ -11,24 +11,53 @@
 <!-- Body -->
   <body>
 <!-- Primary Header -->
-<header class="primary-header group">
+  <header class="
+      primary-header group">
   <div class="container">
     <h1 class="primary-logo">
       <a href="index.html">
-        Samsite<span class="h-standfirst"> Company Tagline</span>
+        Samsite<span class="h-standfirst">Company Tagline</span>
       </a>
     </h1>
-<!-- Navigation -->
-   <nav class="primary-nav">
-          <ul class="list-compact">
-            <li class="nav-active"><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="experiments.html">Experiments</a></li>
-            <li><a href="journal.html">Journal</a></li>
-          </ul>
-        </nav>
-  </div>
-  </header>
-
-  </body>
+  <!-- Navigation -->
+     <nav class="primary-nav">
+            <ul class="list-compact">
+              <li class="nav-active"><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="experiments.html">Experiments</a></li>
+              <li><a href="journal.html">Journal</a></li>
+            </ul>
+          </nav>
+    </div>
+    </header>
+<div class="container">
+    <section class="divider gutters">
+        <h2>About</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </section>
+       <section class="divider gutters">
+        <h2>Allison</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </section>
+       <section class="divider gutters">
+        <h2>Tom</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt molljjjjjit anim id est laborum.</p>
+      </section>
+<!-- container div close --> </div>
+</body>
 </html>
