--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@
   <div class="container">
     <h1 class="primary-logo">
       <a href="index.html">
-        Samsite<span class="h-standfirst">Company Tagline</span>
+        Samsite<span class="h-standfirst">Strategic Account Management</span>
       </a>
     </h1>
   <!-- Navigation -->
